# loony-cognitive-services

./: .gitignore  Cargo.toml
examples/: async-std-batch.rs  realtime-basic.rs  tokio-batch.rs
scripts/: build-google.sh  build-speechmatics.sh  build.sh  microsoft.sh  run-google.sh  run-speechmatics.sh
src/: lib.rs
src/batch/: mod.rs
src/batch/models/: alignment_config.rs  create_job_response.rs  data_fetch_config.rs  delete_job_response.rs  error_response.rs  job_config.rs  job_detail_error.rs  job_details.rs  job_info.rs  job_mode.rs  job_type.rs  language_identification_config.rs  notification_config.rs  operating_point.rs  output_config.rs  output_config_srt_overrides.rs  recognition_alternative.rs  recognition_display.rs  recognition_metadata.rs  recognition_result.rs  retrieve_job_response.rs  retrieve_jobs_response.rs  retrieve_transcript_response.rs  sentiment_analysis_result.rs  sentiment_analysis_result_sentiment_analysis.rs  sentiment_channel_summary.rs  sentiment_segment.rs  sentiment_speaker_summary.rs  sentiment_summary.rs  sentiment_summary_detail.rs  summarization_config.rs  summarization_result.rs  tracking_data.rs  transcription_config.rs  transcription_config_additional_vocab_inner.rs  transcription_config_punctuation_overrides.rs  transcription_config_speaker_diarization_config.rs  translation_config.rs  translation_sentence.rs  usage_details.rs  (+1 more)
src/google/: jabber_tools.rs  mod.rs  speechv2.rs
src/microsoft/: mod.rs
src/realtime/: mod.rs
src/realtime/models/: add_partial_transcript.rs  add_partial_translation.rs  add_transcript.rs  add_translation.rs  audio_added.rs  audio_format.rs  diarization_config.rs  end_of_stream.rs  end_of_transcript.rs  error.rs  info.rs  max_delay_mode_config.rs  operating_point.rs  punctuation_overrides.rs  recognition_alternative.rs  recognition_display.rs  recognition_metadata.rs  recognition_result.rs  recognition_started.rs  set_recognition_config.rs  speaker_diarization_config.rs  start_recognition.rs  transcription_config.rs  translated_sentence.rs  translation_config.rs  vocab_word.rs  vocab_word_one_of.rs  warning.rs
