[package]
name = "loony-cognitive-services"
version = "0.1.0"
edition = "2024"
keywords = ["loony", "loony-cognitive"]
authors = ["Sankar Boro"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/loony-rs/loony-cognitive-services"
repository = "https://github.com/loony-rs/loony-cognitive-services"
description = "Voice-Recognition implementation on Microsoft, Google and Speechmatics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", default-features = true, features = ["ws"]}
base64 = "0.22.1"
cognitive-services-speech-sdk-rs = "1.3.0"
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.4.0"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["multipart", "stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.7"

[features]
default = []
realtime = []
batch = []
ms = []
